--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <title>My GitHub Website</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Simple Image & Quote</title>
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    background: #f9f9f9;
+  }
+
+  .container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* center vertically */
+    align-items: center;     /* center horizontally */
+  }
+
+  img {
+    max-width: 80%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+
+  .quote {
+    text-align: center;
+    font-size: 1.2em;
+    color: #333;
+    margin-bottom: 40px; /* space at bottom if needed */
+  }
+</style>
 </head>
-
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is my first GitHub Pages website!</p>
-</body>
 
+<div class="container">
+  <img src="images/your-image.jpg" alt="Centered Image">
+  <div class="quote">"This is where your quote goes."</div>
+</div>
+
+</body>
 </html>
