--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <div class="container">
-  <img src="images/your-image.jpg" alt="Centered Image">
+  <img src="images/luigi.jpg" alt="Centered Image">
   <div class="quote">"This is where your quote goes."</div>
 </div>
 
