--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <body>
 
 <div class="container">
-  <img src="images/luigi.jpg" alt="Centered Image">
-  <div class="quote">"This is where your quote goes."</div>
+  <img src="images/luigi.jpeg" alt="Centered Image">
+  <div class="quote">"“It’s completely out of touch and an insult to the intelligence of the American people and their lived experience!”"</div>
 </div>
 
 </body>
